Fix issues with responsiveness on mobile.

--- a/limtekbg/App/StyleSheets/administration.scss
+++ b/limtekbg/App/StyleSheets/administration.scss
@@ -1,6 +1,6 @@
 body > header{
   background-color: lightgray;
-  padding-top: 1rem;
+  padding: 1rem;
   max-width: 1366px;
   margin: 1rem auto 1rem auto;
 }
